--- a/v2/src/Container.scss
+++ b/v2/src/Container.scss
@@ -1,6 +1,13 @@
+@import './scss/variables.scss';
+
 body {
   margin: 0;
   padding: 0;
+  font-family: $fontfamily--primary;
+  background-color: $color--darkGrey;
+}
+a {
+  text-decoration: none;
 }
 .container {
   width: 1024px;
