--- a/v2/src/components/Header.scss
+++ b/v2/src/components/Header.scss
@@ -1,4 +1,60 @@
+@import '../scss/variables.scss';
+
 .Header {
   padding: 20px;
-  background-color: blue;
+  background-color: rgba($color--blue, .5);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  @media only screen and (max-width: $bp--large) {
+    display: block;
+  }
+  &-logo {
+    width: 400px;
+    max-width: 40%;
+  }
+  &-nav {
+    min-width: 40%;
+    display: flex;
+    justify-content: space-between;
+    @media only screen and (max-width: $bp--large) {
+      display: none;
+      width: 100%;
+      flex-direction: column;
+      text-align: center;
+      &--active {
+        display: block;
+      }
+    }
+  }
+  &-mobileNavButton {
+    display: none;
+    @media only screen and (max-width: $bp--large) {
+      display: block;
+    }
+  }
+  &-navItem {
+    padding: 0 30px 0 5px;
+    color: $color--lightGrey;
+    font-size: $fontsize--medium;
+    border-left: solid 3px rgba($color--blue, .5);
+    @media only screen and (max-width: $bp--large) {
+      display: block;
+      border-left: 0;
+      background-color: rgba($color--teal, .2); 
+      margin-bottom: 5px;
+    }
+    &:hover,
+    &--active {
+      color: $color--white;
+      border-color: $color--teal;
+      @media only screen and (max-width: $bp--large) {
+        background-color: $color--teal;
+      }
+    }
+  }
 }
