--- a/v2/src/Container.scss
+++ b/v2/src/Container.scss
@@ -1,15 +1,21 @@
 @import './scss/variables.scss';
+@import './scss/utility.scss';
 
 body {
   margin: 0;
   padding: 0;
-  font-family: $fontfamily--primary;
+  font-family: $fontfamily--base;
   background-color: $color--darkGrey;
+  line-height: $lineheight;
+}
+h1, h2, h3, h4, h5, h6 {
+  @include font-primary();
+  font-weight: normal;
 }
 a {
   text-decoration: none;
+  color: map-get($colors, secondary);
 }
 .container {
-  width: 1024px;
-  margin: 0 auto;
+  height: 100%;
 }
